--- a/components/backend-tests-go-jicpdsih/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-jicpdsih/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-jicpdsih
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-jicpdsih:6529d25f8ee906fa728c99c4e5991d45e3960eb1@sha256:d490b92c43771d6f14d359a45ee18e55d0306458b2ee00cf557f0b3d4fda1fcd
+          name: container-image
